# loopy

./: CHANGELOG  CMakeLists.txt  INSTALL  Messages.sh  README  THEMING  loopy.spec  mktar.sh
desktop/: CMakeLists.txt  loopy.desktop  loopy_enqueue.desktop  loopy_play_dvd.desktop
po/: CMakeLists.txt  cs.po  de.po  hu.po  loopy.pot  pt_BR.po  zh_CN.po
src/: .directory  CMakeLists.txt  astyle.sh  fullscreenbar.cpp  fullscreenbar.h  fullscreenplaylist.cpp  fullscreenplaylist.h  generaloptions.ui  infolabel.cpp  infolabel.h  loopy.kcfg  loopyui.rc  main.cpp  mainwindow.cpp  mainwindow.h  options.cpp  playlistdock.cpp  playlistdock.h  seekingoptions.ui  settings.kcfgc  themeoptions.ui  timelabel.cpp  timelabel.h  titlelabel.cpp  titlelabel.h  tooltipeater.cpp  tooltipeater.h  videowidget.cpp  videowidget.h
themes/: CMakeLists.txt
themes/blackglass-fat/: style.qss
themes/blackglass-light/: style.qss
themes/blackglass-overkill/: style.qss
themes/graygradients/: style.qss
