
install(

  DIRECTORY blackglass-light
  DESTINATION ${DATA_INSTALL_DIR}/loopy/themes
  )

install(

  DIRECTORY blackglass-fat
  DESTINATION ${DATA_INSTALL_DIR}/loopy/themes
  )
 
install(

  DIRECTORY blackglass-overkill
  DESTINATION ${DATA_INSTALL_DIR}/loopy/themes
  )

install(

  DIRECTORY graygradients
  DESTINATION ${DATA_INSTALL_DIR}/loopy/themes
  )
